--- a/ComarchCwiczenia/Tests/ComarchCwiczenia.Unit.Test/ComarchCwiczenia.Unit.Test.csproj
+++ b/ComarchCwiczenia/Tests/ComarchCwiczenia.Unit.Test/ComarchCwiczenia.Unit.Test.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="7.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="NUnit" Version="4.2.2" />
     <PackageReference Include="NUnit.Analyzers" Version="4.4.0">
       <PrivateAssets>all</PrivateAssets>
